# voxera

./: .env.example  .gitignore  CHECK_STREAMING.md  Dockerfile  README.md  TESTING.md  docker-compose.yml  pyproject.toml  requirements.txt  test_streaming.py
app/: __init__.py  main.py
app/conversation/: __init__.py  events.py  state.py  turn_manager.py
app/core/: __init__.py  config.py  connection_manager.py  environment.py  exceptions.py  logger.py  logging_config.py  middleware.py
app/database/: __init__.py
app/llm/: __init__.py  llm_consumer.py  streaming_engine.py
app/models/: __init__.py  call_session.py
app/schemas/: __init__.py  asr.py
app/services/: __init__.py  asr.py  audio_output.py  audio_pipeline.py  barge_in.py  call_session_manager.py  pipeline_manager.py
app/streaming/: __init__.py  audio_queue.py  dispatcher.py  metrics.py
app/stt/: __init__.py  consumer.py  engine.py  models.py
app/telephony/: __init__.py  audio_convert.py  call_metrics.py  call_session.py  telephony_log.py  twilio_handler.py  twilio_stream.py  twilio_stt_bridge.py
app/tts/: __init__.py  streaming_engine.py  tts_consumer.py
app/utils/: __init__.py
dashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx  (+1 more)
docs/: architecture.md  demo.md  product-overview.md  system-design.md
tests/: test_audio_pipeline.py  test_e2e_asr.py  test_telephony_audio_convert.py
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+62 files in other folders)
